# AeroForge

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_TREE.txt  NEXT_STEPS.md  PROGRESS.md  README.md  SECURITY.md  SESSION_SUMMARY.md  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
apps/: CMakeLists.txt
apps/sandbox/: CMakeLists.txt  demo_viewer.cpp
apps/track/: CMakeLists.txt  aeroforge-track.cpp
configs/: track_aruco.yml  track_colorball.yml  track_norfair.yml
docs/: ROADMAP.md
include/aeroforge/: config.hpp  core.hpp  dji_iface.hpp  math.hpp  plugin.hpp  telemetry.hpp  ui.hpp
include/aeroforge/ipc/: msgpack_serializer.hpp  socket_client.hpp
services/norfair/: README.md  config.yaml  norfair_service.py  protocol.py  requirements.txt  run.sh  tracker.py
src/config/: loader.cpp
src/control/: controller_pid_velocity.cpp
src/core/: frame_pool.cpp  timing.cpp
src/dji/: mock_drone.cpp
src/estimate/: estimator_ground_plane.cpp  estimator_size_based.cpp
src/io/: webcam_capture.cpp
src/ipc/: msgpack_serializer.cpp  socket_client.cpp
src/math/: kalman.cpp  pid.cpp
src/tracking/: kalman_tracker.cpp  norfair_tracker.cpp
src/ui/: hud.cpp
src/vision/: detector_aruco.cpp  detector_colorball.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_detector_colorball.cpp
tests/unit/: CMakeLists.txt  test_kalman.cpp  test_pid.cpp  test_ring_buffer.cpp
